Modports now in interfaces

--- a/Engine/Resources/Styles/Default/Default.css
+++ b/Engine/Resources/Styles/Default/Default.css
@@ -975,6 +975,7 @@ body.NDContentPage {
 
 .TFunction .NDPrototype,
 .TModule   .NDPrototype,
+.TModport  .NDPrototype,
 .TOperator .NDPrototype {
 	background-color: #F0F0F0;
 	border-color: #C8C8C8;
@@ -982,23 +983,27 @@ body.NDContentPage {
 	}
 	.TFunction .NDPrototype::-webkit-scrollbar-thumb,
 	.TModule   .NDPrototype::-webkit-scrollbar-thumb,
+	.TModport   .NDPrototype::-webkit-scrollbar-thumb,
 	.TOperator .NDPrototype::-webkit-scrollbar-thumb {
 		background-color: #C8C8C8;
 		border-bottom: 1px solid #F0F0F0;
 		}
 	.TFunction .NDPrototype::-webkit-scrollbar-track,
 	.TModule   .NDPrototype::-webkit-scrollbar-track,
+	.TModport  .NDPrototype::-webkit-scrollbar-track,
 	.TOperator .NDPrototype::-webkit-scrollbar-track {
 		background-color: #F0F0F0;
 		}
 	.TFunction .SuEntryIcon,
 	.TModule   .SuEntryIcon,
+	.TModport  .SuEntryIcon,
 	.TOperator .SuEntryIcon {
 		background-color: #EAEAEA;
 		border: 1px solid #C7C7C7;
 		}
 	.TFunction .SeEntryIcon,
 	.TModule   .SeEntryIcon,
+	.TModport  .SeEntryIcon,
 	.TOperator .SeEntryIcon {
 		background-color: #ECECEC;
 		border: 1px solid #C2C2C2;
